force-app/main/default/objects/FNS_CustomerProfile__c/FNS_CustomerProfile__c.object-meta.xml
<CustomObject>
    <description>Customer Profile</description>
    <label>Customer Profile</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Customer Profile No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>