force-app/main/default/objects/FNS_CustomerProfile__c/fields/FNS_CreditComment__c.field-meta.xml
<CustomField>
    <fullName>FNS_CreditComment__c</fullName>
    <description>Credit Comment</description>
    <label>Credit Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>