force-app/main/default/objects/FNS_CustomerProfile__c/fields/FNS_CreditReviewDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_CreditReviewDate__c</fullName>
    <description>Credit Review Date</description>
    <label>Credit Review Date</label>
    <type>DateTime</type>
</CustomField>