force-app/main/default/objects/FNS_CustomerProfile__c/fields/FNS_CustomerBusiness__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerBusiness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Profiles</relationshipLabel>
    <relationshipName>CustomerProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>