force-app/main/default/objects/FNS_CustomerProfile__c/fields/FNS_CustomerProfileExternalId__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerProfileExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Customer Profile External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>