force-app/main/default/objects/FNS_CustomerProfile__c/fields/FNS_ProfileType__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProfileType__c</fullName>
    <description>Profile Type</description>
    <label>Profile Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>