force-app/main/default/objects/FNS_CustomerProfile__c/recordTypes/FNS_Customer_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>FNS_Customer_Read_Only</fullName>
    <active>true</active>
    <label>Customer Read Only</label>
</RecordType>