force-app/main/default/objects/FNS_CustomerProfile__c/listViews/FNS_Customer_Profiles.listView-meta.xml
<ListView>
    <fullName>FNS_Customer_Profiles</fullName>
    <columns>NAME</columns>
    <columns>FNS_CustomerBusiness__c</columns>
    <columns>FNS_ProfileType__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Customer Profiles</label>
</ListView>